--- a/src/assets/scss/App.scss
+++ b/src/assets/scss/App.scss
@@ -52,6 +52,36 @@ input[type="radio"] {
     cursor: pointer;
 }
 
+img {
+    border-radius: $border-radius;
+}
+
+.btn-primary {
+    background-color: $primary-button-color;
+    border: none;
+    border-radius: $border-radius;
+    color: $white;
+
+    padding-left: 3rem;
+    padding-top: 1rem;
+    padding-right: 3rem;
+    padding-bottom: 1rem;
+
+    margin-bottom: 0.5rem;
+}
+
+.btn-secondary {
+    background-color: $secondary-button-color;
+    border: none;
+    border-radius: $border-radius;
+    color: $white;
+    
+    padding-left: 3rem;
+    padding-top: 1rem;
+    padding-right: 3rem;
+    padding-bottom: 1rem;
+}
+
 .card-link {
     background-color: $card-background-color;
     padding: 2rem;
@@ -59,4 +89,32 @@ input[type="radio"] {
     margin-bottom: 1rem;
     border-radius: $border-radius;
     cursor: pointer;
+}
+
+.card-item {
+    background-color: $card-background-color;
+    padding: 1rem;
+    margin-bottom: 1rem;
+    // margin-left: 1rem;
+    // margin-right: 1rem;
+    // border-radius: $border-radius;
+    cursor: pointer;
+    display: flex;
+    flex-direction: column;
+
+    .info {
+        display: flex;
+        margin-bottom: 0.5rem;
+
+        .title-and-year {
+            display: flex;
+            flex-direction: column;
+            margin-left: 0.5rem;
+        }   
+    }
+
+    .card-item-btns {
+        display: flex;
+        flex-direction: column;
+    }
 }
