--- a/src/assets/scss/App.scss
+++ b/src/assets/scss/App.scss
@@ -11,12 +11,37 @@ h1, h2, h3, h4, h5, h6 {
     margin: 0;
 }
 
+h1 {
+    font-size: 1.5rem;
+}
+
+h2 {
+    font-size: 1.4rem;
+}
+
+h3 {
+    font-size: 1.3rem;
+}
+
+h4 {
+    font-size: 1.2rem;
+}
+
+h5 {
+    font-size: 1.1rem;
+}
+
+h6 {
+    font-size: 1rem;
+}
+
 p {
     margin: 0;
+    font-size: 0.9rem;
 }
 
 .p-small {
-    font-size: 0.9rem;
+    font-size: 0.8rem;
     font-weight: $font-weight-light;
 }
 
@@ -31,9 +56,12 @@ p {
     border-radius: $border-radius;
     color: $white;
 
-    padding-left: 3rem;
+    font-size: 0.9rem;
+    font-weight: $font-weight-bold;
+
+    padding-left: 2.5rem;
     padding-top: 1rem;
-    padding-right: 3rem;
+    padding-right: 2.5rem;
     padding-bottom: 1rem;
 
     margin-bottom: 0.5rem;
@@ -53,10 +81,13 @@ p {
     border: none;
     border-radius: $border-radius;
     color: $white;
+
+    font-size: 0.9rem;
+    font-weight: $font-weight-bold;
     
-    padding-left: 3rem;
+    padding-left: 2.5rem;
     padding-top: 1rem;
-    padding-right: 3rem;
+    padding-right: 2.5rem;
     padding-bottom: 1rem;
 }
 
