implemented some of the ui to MyReviewPage

--- a/src/assets/scss/App.scss
+++ b/src/assets/scss/App.scss
@@ -221,3 +221,11 @@ img {
         margin-left: 0.5rem;
     }
 }
+
+.review-content {
+    background-color: $card-background-color;
+    border-radius: $border-radius;
+    padding: 0.5rem;
+    margin-left: 0.5rem;
+    margin-right: 0.5rem;
+}
