--- a/src/assets/scss/variables.scss
+++ b/src/assets/scss/variables.scss
@@ -7,6 +7,7 @@ $link-color: #183461;
 $black: #262F3B;
 $alt-text-color: #785720;
 $input-color: #CDC4BC;
+$btn-disabled-color: #afafaf;
 
 /* ---------------------------------- FONT ---------------------------------- */
 $font-weight-light: 300;
