small fixes on the ui

--- a/src/assets/scss/App.scss
+++ b/src/assets/scss/App.scss
@@ -125,6 +125,13 @@ p {
     padding-bottom: 1rem;
 }
 
+.nav-link {
+    font-size: 15px;
+    margin: 0;
+    margin-left: 0.5rem;
+    margin-right: 0.5rem;
+}
+
 .dropdown {
     background-color: $card-background-color;
     color: $black;
@@ -156,7 +163,6 @@ p {
         border-radius: $border-radius;
         margin-top: 50px;
         margin-bottom: 50px;
-        // width: 80%;
     }
 }
 
@@ -173,9 +179,17 @@ img {
     border-radius: $border-radius;
 }
 
+.poster-container {
+    height: 400px;
+}
+
 .poster-img {
     width: auto;
     height: 7rem;
+}
+
+.poster-detail-page {
+    height: 400px;
 }
 
 .full-width {
@@ -258,6 +272,11 @@ img {
     margin: 1rem;
     padding: 0.5rem;
     display: flex;
+    height: 130px;
+
+    .movie-card-poster {
+        align-self: center;
+    }
 
     .movie-card-overview {
         margin-left: 0.5rem;
